--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
     "lib-flexible": "^0.3.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "px2rem-loader": "^0.1.9",
